--- a/trunk/eeplat/.classpath
+++ b/trunk/eeplat/.classpath
@@ -47,8 +47,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsqlparser.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/dom4j-2.jar"/>
-	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ldap.jar"/>
-	<classpathentry kind="lib" path="libs/lib_common/sae-local-1.0.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/dbmanager.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/opencsv-2.3.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
